--- a/public/scss/bootstrap/_forms.scss
+++ b/public/scss/bootstrap/_forms.scss
@@ -6,7 +6,7 @@
     font-weight: $default-font-weight;
     line-height: 1.6;
     border-radius: 0.35rem;
-    padding: 0.5rem 0.85rem;
+    padding: 0.2rem 0.85rem !important;
 
     &:focus {
         box-shadow: none;
